FIX(styles.css): set display flex in .score_form class for centered display on mobile view

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -192,6 +192,9 @@ form div.col {
     margin: 10px;
     font-size: 3vh;
     max-width: 780px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .score_save {
